# Manga-Bookmarks

./: .flaskenv  .gitignore  .replit  MangaBackup.md  api_models.py  app.db  app.py  bookmarks.js  bookmarks.json  config.py  e.html  e.py  index.html  main.css  main.py  new.html  pyproject.toml  requirements.txt  test.db  test.html  test.py
.history/: bookmarks_20230311104324.js  bookmarks_20230311105525.js  bookmarks_20230311110601.json  bookmarks_20230311112000.json  bookmarks_20230311112650.json  bookmarks_20230311113152.js  bookmarks_20230311113436.js  bookmarks_20230311113642.js  bookmarks_20230311113714.js  bookmarks_20230311113730.js  bookmarks_20230311113810.js  bookmarks_20230311113816.js  bookmarks_20230311113842.js  bookmarks_20230311113906.js  bookmarks_20230311113923.js  bookmarks_20230311113932.js  bookmarks_20230311114006.js  bookmarks_20230311114052.js  bookmarks_20230311114258.js  index_20230311105050.html  index_20230311111051.html  index_20230311111517.html  index_20230311112005.html  index_20230311113150.html  index_20230311113319.html  index_20230311113655.html  main_20230311105651.css  main_20230311105812.css  main_20230311105919.css  main_20230311105941.css  main_20230311105955.css  main_20230311110021.css  main_20230311110733.css  main_20230311110833.css  main_20230311110847.css  main_20230311110900.css  main_20230311110928.css  main_20230311110934.css  main_20230311111000.css  main_20230311115033.css  (+56 more)
app/: __init__.py  api_db.py  api_models.py  api_routes.py  forms.py  helper.py  models.py  routes.py
manga-bookmarks/: package-lock.json  (+1 more)
(+1759 files in other folders)
