[tool.poetry]
name = "repl_nix_Manga-Bookmarks"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
alembic = "^1.10.2"
Flask-SQLAlchemy = "^3.0.3"
WTForms = "^3.0.1"
fastapi = "^0.95.0"
Flask = "^2.2.3"
Flask-Migrate = "^4.0.4"
Flask-WTF = "^1.1.1"
requests-html = "^0.10.0"
SQLAlchemy = "^2.0.8"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
